2009-10-29 15:15  Mateusz Loskot <mateusz@loskot.net>

	* [r2705] tests/unit/operation/buffer/BufferOpTest.cpp: Added test case
	  for buffer of multipolygon from XMLTester's buffer.xml, case #25 but
	  with custom quadrant segments

2009-10-29 14:25  Mateusz Loskot <mateusz@loskot.net>

	* [r2704] tests/unit/operation/buffer/BufferOpTest.cpp: Added test case
	  for buffer of POINT(0 0) with distance 1.0 and 32 quadrant segments.
2009-10-29 12:30  Mateusz Loskot <mateusz@loskot.net>

	* [r2703] tests/unit/operation/buffer: added unit test case for BufferOp,
	  tests/unit/Makefile.am: added new test case source to Makefile,
	  build/msvc90/geos_unit/geos_unit.vcproj: updated Visual C++ project.

2009-10-28 12:10  Mateusz Loskot <mateusz@loskot.net>

	* [r2702] tests/xmltester/XMLTester.cpp: declare checkBufferSuccess function
	  to take geometries by refernece to const.

2009-10-25 18:47  Mateusz Loskot <mateusz@loskot.net>
	
	* Fixed typo in getCentroid function comment in Geometry.h

2009-10-19 14:47  Mateusz Loskot <mateusz@loskot.net>

	* [r2684] tests/xmltester/tests/buffer_snapround.xml: not well-formed XML,
	  fixed missing attribute.

2009-10-16 15:27  Mateusz Loskot <mateusz@loskot.net>

	* [r2676] tests/xmltester/tests/fme.xml: xmltester/tests: missing
	  double quotes around XML attribute value in fme.xml.

2009-10-14 20:42  Sandro Santilli <strk@keybit.net>

	* [r2675] ChangeLog: regenerate ChangeLog

2009-10-14 15:32  Mateusz Loskot <mateusz@loskot.net>

	* [r2674] build/msvc90/geos_unit/geos_unit.vcproj,
	  build/msvc90/geos_xmltester/geos_xmltester.vcproj,
	  tests/xmltester/XMLTester.cpp, tests/xmltester/makefile.vc: *
	  Optional use of GEOS_DEBUG_MSVC_USE_VLD in XMLTester.cpp
	  * Added xmltester/makefile.vc as port of testrunner.sh for
	  Windows to be able to run all tests in batch:
	  ** nmake /f makefile.vc XMLTESTER=C:\path\to\xmltester.exe

2009-10-14 12:05  Mateusz Loskot <mateusz@loskot.net>
